2006-12-17  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBindingCompilerManager.cs: Track changes in FileService API.

2006-12-15  Ankit Jain  <jankit@novell.com>

	* CSharpBindingCompilerManager.cs (Compile): Filename arg to resgen
	should be quoted.

2006-12-15  Ankit Jain  <jankit@novell.com>

	* CSharpBindingCompilerManager.cs (Compile): Use resgen to convert .resx
	to embeddable resource format (.resources). Handle 'null' resourceId.

2006-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.mdp, Parser/SharpDevelopTree/CompilationUnit.cs,
	  Parser/SharpDevelopTree/Indexer.cs,
	  Parser/SharpDevelopTree/Parameter.cs,
	  Parser/SharpDevelopTree/Event.cs, Parser/SharpDevelopTree/Field.cs,
	  Parser/SharpDevelopTree/Property.cs, Makefile.am: Removed some
	  unnecessary Default* subclasses.
	* Parser/Parser.cs, Parser/CSharpVisitor.cs, Parser/Resolver.cs,
	  Parser/SharpDevelopTree/Destructor.cs,
	  Parser/SharpDevelopTree/Method.cs,
	  Parser/SharpDevelopTree/ReturnType.cs,
	  Parser/SharpDevelopTree/Class.cs,
	  Parser/SharpDevelopTree/Constructor.cs,
	  Parser/SharpDevelopTree/AttributeSection.cs: Renamed Abstract*
	  classes to Default*. Removed some unnecessary Default* subclasses.

2006-12-13  Ankit Jain  <jankit@novell.com>

	* Project/CSharpCompilerParameters.cs (Win32Resource): New.
	* CSharpBindingCompilerManager.cs (Compile): Generate 
	option for Win32Resource. Don't generate option for win32icon 
	if win32resource is defined.

2006-12-12  Ankit Jain  <jankit@novell.com>

	* CSharpBindingCompilerManager.cs (Compile): Use ProjectFile.ResourceId
	for embedded resources.

2006-11-17  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Parser.cs: Why ParseMethodModies was set to false?
	  re-enabling. Fixes local variable code completion.

2006-11-14  Ankit Jain  <jankit@novell.com>

	* Gui/CodeGenerationPanel.cs (CodeGenerationPanelWidget.ctor): Add
	missing 'Module' option for compile target.
