@@ -184,7 +184,11 @@ namespace CSharpBinding
 			string outstr = compilerName + " @" + responseFileName;
 			TempFileCollection tf = new TempFileCollection();
 
-			DoCompilation(outstr, tf, ref output, ref error);
+			string workingDir = ".";
+			if (projectFiles != null && projectFiles.Count > 0)
+				workingDir = projectFiles [0].Project.BaseDirectory;
+
+			DoCompilation(outstr, tf, workingDir, ref output, ref error);
 
 			ICompilerResult result = ParseOutput(tf, output, error);
 			if (result.CompilerOutput.Trim () != "")
@@ -245,7 +249,7 @@ namespace CSharpBinding
 			return new DefaultCompilerResult(cr, compilerOutput.ToString());
 		}
 		
-		private void DoCompilation(string outstr, TempFileCollection tf, ref string output, ref string error) {
+		private void DoCompilation(string outstr, TempFileCollection tf, string working_dir, ref string output, ref string error) {
 			output = Path.GetTempFileName();
 			error = Path.GetTempFileName();
 			
@@ -256,7 +260,7 @@ namespace CSharpBinding
 			outstr = outstr.Substring(tokens[0].Length+1);
 
 			ProcessService ps = (ProcessService) ServiceManager.GetService (typeof(ProcessService));
-			ProcessWrapper pw = ps.StartProcess(tokens[0], "\"" + outstr + "\"", ".", outwr, errwr, delegate{});
+			ProcessWrapper pw = ps.StartProcess(tokens[0], "\"" + outstr + "\"", working_dir, outwr, errwr, delegate{});
 			pw.WaitForExit();
 			outwr.Close();
 			errwr.Close();
