@@ -1,3 +1,9 @@
+2006-12-21  Ankit Jain  <jankit@novell.com>
+
+	* CSharpBindingCompilerManager.cs (Compile): Use project's base
+	directory as the working directory when invoking the compiler.
+	(DoCompilation): Add param 'working_dir'.
+
 2006-12-17  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* CSharpBindingCompilerManager.cs: Track changes in FileService API.
